force-app/main/default/objects/Zoho_Ticket2__c/Zoho_Ticket2__c.object-meta.xml
<CustomObject>
    <label>Zoho Ticket</label>
    <nameField>
        <label>Zoho Ticket Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoho Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>