force-app/main/default/objects/Zoho_Ticket2__c/fields/Closed_Time__c.field-meta.xml
<CustomField>
    <fullName>Closed_Time__c</fullName>
    <label>Closed Time</label>
    <type>DateTime</type>
</CustomField>