force-app/main/default/objects/Zoho_Ticket2__c/fields/Status_Type__c.field-meta.xml
<CustomField>
    <fullName>Status_Type__c</fullName>
    <label>Status Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>