force-app/main/default/objects/Zoho_Ticket2__c/fields/Web_URL__c.field-meta.xml
<CustomField>
    <fullName>Web_URL__c</fullName>
    <label>Web URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>