force-app/main/default/objects/Zoho_Ticket2__c/fields/Zoho_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Zoho Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>